test_regress/t/t_tagged_matches_notpattern_bad.out
%Error: t/t_tagged_matches_notpattern_bad.v:19:13: Expected tagged pattern in matches expression
   19 |       if (x matches 1)
      |             ^~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
